--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="el">
 <head>
-  <meta charset="UTF-8">
-  <title>Obsidian Git Setup</title>
-  <meta http-equiv="refresh" content="0; url=https://github.com/ssamartzis/OmoniaTrans-CIO-Playbook/tree/main/ObsidianGitSetup">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Οδηγός Git Sync για Obsidian</title>
+  <style>
+    body {
+      font-family: system-ui, sans-serif;
+      background-color: #0d1117;
+      color: #c9d1d9;
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1 {
+      color: #58a6ff;
+    }
+    a {
+      color: #58a6ff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    code {
+      background-color: #161b22;
+      padding: 2px 4px;
+      border-radius: 4px;
+      font-size: 0.95em;
+    }
+  </style>
 </head>
 <body>
-  <p>Redirecting to <a href="https://github.com/ssamartzis/OmoniaTrans-CIO-Playbook/tree/main/ObsidianGitSetup">GitHub Repository</a>...</p>
+  <h1>Οδηγός Git Sync για το Obsidian</h1>
+  <p>
+    Αυτό το repository περιέχει οδηγίες και αρχεία για να ρυθμίσετε το plugin <strong>Obsidian Git</strong>
+    ώστε να συγχρονίζονται οι αλλαγές σας αυτόματα μέσω GitHub.
+  </p>
+
+  <h2>📄 Περιεχόμενα</h2>
+  <ul>
+    <li><a href="Obsidian_Git_Settings.md">Ρυθμίσεις Plugin</a></li>
+    <li><a href="troubleshooting.md">Αντιμετώπιση Προβλημάτων</a></li>
+    <li><a href="README.md">README (στα Ελληνικά)</a></li>
+  </ul>
+
+  <h2>🔧 Τεχνικές Απαιτήσεις</h2>
+  <ul>
+    <li>Git εγκατεστημένο στο σύστημά σας</li>
+    <li>GitHub λογαριασμός</li>
+    <li>Το plugin <code>Obsidian Git</code> εγκατεστημένο στο Obsidian</li>
+  </ul>
+
+  <p>Ενημερώσεις και επεξηγήσεις θα προστίθενται σταδιακά.</p>
+  <p><em>— Συντηρείται από τον <strong>ssamartzis</strong></em></p>
 </body>
 </html>
